chore: enclave RNG + deploy tooling WIP
Pre-existing working-tree changes on this branch, bundled:
- common-random: multi-strategy entropy engine (ChaCha20, HMAC-DRBG,
  SHA256-counter, SecureRandom) behind RandomManager
- rng-service: NsmClient/RngEngine updates, drop NativeWarmup
- proxy: ModuleId routing helper
- deploy: bootstrap.sh, kms_selfsign_cert.py, NITRO-CLI/SET-UP docs,
  build-eif/DEPLOY tweaks, drop Dockerfile.enclave
- common-crypto Hpke + README updates

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>